# CruzAid-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  setup_data.py  test_cruzaid.py
.github/workflows/: ci.yml
