[tool.poetry]
name = "cruzaid"
version = "0.1.0"
description = "SMS medical-triage bot routing Santa Cruz students to health resources"
authors = ["kannishk1111 <kannishk13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0"
twilio = "^9.0"
openai = "^1.0"
pymongo = "^4.6"
python-dotenv = "^1.0"
certifi = "*"
flask-limiter = "^3.5"
gunicorn = "^21.2"
redis = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mongomock = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

